--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/react-redux": "^7.1.24",
     "@types/uuid": "^9.0.0",
     "axios": "^1.2.3",
+    "jest": "^29.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -29,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook -s public",
@@ -65,6 +68,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -75,6 +80,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
+    "babel-jest": "^29.4.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "jest-image-snapshot": "^6.1.0",
     "jest-puppeteer": "^6.2.0",
